--- a/partials/api/angularPoint.apQueryFactory.html
+++ b/partials/api/angularPoint.apQueryFactory.html
@@ -17,9 +17,10 @@
 </li>
 </ul>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_create">create(config)</h3>
+<ul class="methods"><li><h3 id="methods_create">create(config, model)</h3>
 <div class="create"><div class="angularpoint-apqueryfactory-page angularpoint-apqueryfactory-create-page"><p>Instantiates and returns a new Query.</p>
 </div><h5 id="methods_create_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>config</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apqueryfactory-page angularpoint-apqueryfactory-create-page"><p>Options object.</p>
+</div></td></tr><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apqueryfactory-page angularpoint-apqueryfactory-create-page"><p>Reference to the model.</p>
 </div></td></tr></tbody></table></div>
 </li>
 </ul>
