--- a/partials/api/angularPoint.apUtilityService.html
+++ b/partials/api/angularPoint.apUtilityService.html
@@ -61,6 +61,12 @@ falls within the date range provided</p>
 </div> <p><em>(default: new Date())</em></p></td></tr></tbody></table><h5 id="methods_datewithinrange_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-datewithinrange-page"><p>Does the date fall within the range?</p>
 </div></td></tr></table></div>
 </li>
+<li><h3 id="methods_fromcamelcase">fromCamelCase(s)</h3>
+<div class="fromcamelcase"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-fromcamelcase-page"><p>Converts a camel case string into a space delimited string with each word having a capitalized first letter.</p>
+</div><h5 id="methods_fromcamelcase_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>s</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-fromcamelcase-page"><p>String to convert.</p>
+</div></td></tr></tbody></table><h5 id="methods_fromcamelcase_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-fromcamelcase-page"><p>Humanized string.</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_registerchange">registerChange(model)</h3>
 <div class="registerchange"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-registerchange-page"><p>If online and sync is being used, notify all online users that a change has been made.
 //Todo Break this functionality into FireBase module that can be used if desired.</p>
