--- a/partials/api/List.FieldDefinition.html
+++ b/partials/api/List.FieldDefinition.html
@@ -75,7 +75,8 @@ See <a href="#/api/User">User</a> for more information.
 </dd>
 <dt>UserMulti</dt>
 <dd>Parses delimited string to returns an array of User objects.</dd>
-</dl></div></div>
+</dl>
+</div></div>
 </li>
 <li><h3 id="properties_mappedname">mappedName</h3>
 <div class="mappedname"><div class="list-fielddefinition-page"><p>The attribute name we&#39;d like to use
